# mrcepid-bcfsplitter

./: .gitignore  Readme.developer.md  Readme.md  dxapp.json  pyproject.toml
bcfsplitter/: bcfsplitter.py
src/: mrcepid-bcfsplitter.py
test/: bcfsplitter_test.py
test/test_data/: test_input.vcf.gz.tbi  test_input1.vcf.gz.tbi  test_input2.vcf.gz.tbi
