[tool.poetry]
name = "bcfsplitter"
version = "2.0.0"
description = ""
authors = ["Eugene Gardner <eugene.gardner@mrc-epid.cam.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
dxpy = "0.346.0"
pytest = "^7.4.0"
pysam = "^0.22.1"
general-utilities = {git = "https://github.com/mrcepid-rap/general_utilities.git", rev = "v1.5.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
