[project]
name = "bcfsplitter"
version = "2.0.2"
description = ""
authors = [
    { name = "Eugene Gardner", email = "eugene.gardner@mrc-epid.cam.ac.uk" },
    { name = "Alish Palmos", email = "alish.palmos@insmed.com" }
]
readme = "README.md"
requires-python = ">=3.8,<3.9"

dependencies = [
    "dxpy==0.346.0",
    "pytest>=7.4.0,<8.0.0",
    "pysam>=0.22.1,<0.23.0",
    "general-utilities @ git+https://github.com/mrcepid-rap/general_utilities.git@main"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

